756699:TISPRD-4587:Issue fixed for A-Z List on Homepage not showing brands

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -32699,6 +32699,10 @@ header.brand-header {
 	text-align:center;
 }
 
+.showAZBrandsImportant{
+	display: block !important;
+}
+
 /*--------------maincss-----------*/
 .row
 {
@@ -41359,6 +41363,7 @@ bottom:35px;
 .home-product-you-care-carousel .owl-theme .owl-controls,
 .home-best-pick-carousel.owl-theme .owl-controls,
 #ia_products_hot_list.owl-theme .owl-controls {top: 38%;margin: 0;}
+
 
 
 
